--- a/glushkovizer-gtk4/resources/glushkovizer.ui
+++ b/glushkovizer-gtk4/resources/glushkovizer.ui
@@ -22,7 +22,7 @@
                 <property name="spacing">10</property>
                 <child>
                   <object class="GtkButton">
-                    <property name="label">Parse</property>
+                    <property name="label" translatable="true">Parse</property>
                     <signal name="clicked" handler="handle_parse_clicked" swapped="True"/>
                   </object>
                 </child>
@@ -30,7 +30,7 @@
                   <object class="GtkEntry" id="entry">
                     <property name="hexpand">true</property>
                     <property name="hexpand-set">true</property>
-                    <property name="placeholder-text">Enter a regular expresion</property>
+                    <property name="placeholder-text" translatable="true">Enter a regular expresion</property>
                     <signal name="activate" handler="handle_entry_activate" swapped="True"/>
                   </object>
                 </child>
