--- a/glushkovizer-gtk4/resources/glushkovizer.ui
+++ b/glushkovizer-gtk4/resources/glushkovizer.ui
@@ -11,14 +11,15 @@
         <child>
           <object class="GtkBox">
             <property name="orientation">1</property>
+            <property name="margin-bottom">10</property>
+            <property name="margin-end">10</property>
+            <property name="margin-start">10</property>
+            <property name="margin-top">10</property>
+            <property name="spacing">10</property>
             <child>
               <object class="GtkBox">
                 <property name="hexpand">true</property>
                 <property name="hexpand-set">true</property>
-                <property name="margin-bottom">10</property>
-                <property name="margin-end">10</property>
-                <property name="margin-start">10</property>
-                <property name="margin-top">10</property>
                 <property name="spacing">10</property>
                 <child>
                   <object class="GtkButton">
@@ -29,7 +30,6 @@
                 <child>
                   <object class="GtkEntry" id="entry">
                     <property name="hexpand">true</property>
-                    <property name="hexpand-set">true</property>
                     <property name="placeholder-text" translatable="true">Enter a regular expresion</property>
                     <signal name="activate" handler="handle_entry_activate" swapped="True"/>
                   </object>
@@ -37,12 +37,22 @@
               </object>
             </child>
             <child>
+              <object class="GtkTextView" id="error">
+                <property name="visible">false</property>
+                <property name="editable">false</property>
+                <property name="valign">3</property>
+                <property name="hexpand">true</property>
+                <property name="vexpand">true</property>
+                <style>
+                  <class name="error_box"/>
+                </style>
+              </object>
+            </child>
+            <child>
               <object class="GtkBox" id="list">
                 <property name="hexpand">true</property>
-                <property name="hexpand-set">true</property>
                 <property name="orientation">1</property>
                 <property name="vexpand">true</property>
-                <property name="vexpand-set">true</property>
                 <property name="visible">false</property>
                 <child>
                   <object class="GtkLabel">
@@ -58,9 +68,7 @@
                 <child>
                   <object class="GtkImage" id="image">
                     <property name="hexpand">true</property>
-                    <property name="hexpand-set">true</property>
                     <property name="vexpand">true</property>
-                    <property name="vexpand-set">true</property>
                   </object>
                 </child>
               </object>
